--- a/index.html
+++ b/index.html
@@ -700,9 +700,8 @@
                 <h2 class="form-title">Confirmar</h2>
                 <p class="form-subtitle">Por favor, responded antes del 1 de Marzo, 2026.</p>
 
-                <!-- FORMULARIO NATIVO (sin iframe, redirige a gracias.html) -->
+                <!-- FORMULARIO NATIVO (sin iframe) -->
                 <form id="rsvpForm" action="https://formsubmit.co/fernan_92@hotmail.com" method="POST">
-
                     <!-- CONFIGURACIÓN FORMSUBMIT -->
                     <input type="hidden" name="_captcha" value="false">
                     <input type="hidden" name="_template" value="table">
