--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             transform: translateY(0);
         }
 
-        /* Hero Section - SOLO ESTA TIENE MIN-HEIGHT */
+        /* Hero Section - OCUPA TODA LA PANTALLA */
         .hero {
             min-height: 100vh;
             background-image: url('https://images.unsplash.com/photo-1519741497674-611481863552?w=1920&q=80');
@@ -132,7 +132,10 @@
             background-attachment: fixed;
             position: relative;
             text-align: center;
-            padding: 70px 60px 30px 60px;
+            padding: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         .hero::before {
@@ -148,12 +151,17 @@
         .hero-content {
             position: relative;
             z-index: 1;
-            background-color: rgba(249, 249, 249, 0.7);
+            background-color: rgba(249, 249, 249, 0.5);
             backdrop-filter: blur(8px);
             -webkit-backdrop-filter: blur(8px);
-            padding: 45px 70px;
-            max-width: 650px;
-            border-radius: 2px;
+            padding: 60px;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
         }
 
         .hero h1 {
