--- a/index.html
+++ b/index.html
@@ -247,14 +247,15 @@
             display: grid;
             grid-template-columns: repeat(3, 1fr);
             gap: 20px;
-            max-width: 1600px;
+            max-width: 1000px;
             width: 100%;
+            margin: 0 auto;
         }
 
         .gallery-item {
             position: relative;
             overflow: hidden;
-            padding-bottom: 100%;
+            padding-bottom: 133%;
             cursor: pointer;
             background-color: #f0f0f0;
             border-radius: 4px;
@@ -680,7 +681,7 @@
             }
 
             .gallery-grid {
-                max-width: 1200px;
+                max-width: 900px;
             }
         }
 
