Corregir dirección Normandie Ondarreta: A-1 Km 36, El Molar

--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@
                         <h3 class="event-title">Convite</h3>
                         <p class="event-time">18:30</p>
                         <p class="event-location">Restaurante Normandie Ondarreta</p>
-                        <p class="event-address">A-2, Km 40, 28803 Torrejón de Ardoz, Madrid</p>
+                        <p class="event-address">A-1, Km 36, 28710 El Molar, Madrid</p>
                         <a href="https://maps.app.goo.gl/JbA7AxqHtL2kPmYCA?g_st=ipc" target="_blank" class="map-link">Ver Mapa</a>
                     </div>
                 </div>
