--- a/index.html
+++ b/index.html
@@ -804,7 +804,7 @@
 
                 <div class="gallery-grid">
                     <div class="gallery-item">
-                        <img src="https://images.unsplash.com/photo-1483347756197-71ef80e95f73?w=1200" alt="Aurora Boreal">
+                        <img src="images/IMG_3955.jpg" alt="Nuria y Fernando">
                     </div>
                     <div class="gallery-item">
                         <img src="https://images.unsplash.com/photo-1509316785289-025f5b846b35?w=1200" alt="Paisaje árido">
