--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         /* Hero Section - OCUPA TODA LA PANTALLA */
         .hero {
             min-height: 100vh;
-            background-image: url('https://images.unsplash.com/photo-1519741497674-611481863552?w=1920&q=80');
+            background-image: url('images/portada.png');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
