--- a/index.html
+++ b/index.html
@@ -298,17 +298,54 @@
         }
 
         .event-card {
+            position: relative;
             text-align: center;
             padding: 30px;
             background: rgba(196, 164, 132, 0.04);
             border-radius: 4px;
             border: 1px solid rgba(196, 164, 132, 0.1);
             transition: all 0.3s ease;
+            overflow: hidden;
+            background-size: cover;
+            background-position: center;
+        }
+
+        /* Overlay para mejorar legibilidad del texto */
+        .event-card::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: rgba(249, 249, 249, 0.85);
+            backdrop-filter: blur(2px);
+            -webkit-backdrop-filter: blur(2px);
+            z-index: 0;
+            transition: background 0.3s ease;
+        }
+
+        .event-card:hover::before {
+            background: rgba(249, 249, 249, 0.88);
+        }
+
+        /* Todo el contenido de la tarjeta debe estar encima del overlay */
+        .event-card > * {
+            position: relative;
+            z-index: 1;
+        }
+
+        /* Imágenes de fondo específicas */
+        .event-card.iglesia {
+            background-image: url('images/Iglesia.png');
+        }
+
+        .event-card.normandie {
+            background-image: url('images/Normandie.png');
         }
 
         .event-card:hover {
             transform: translateY(-1px);
-            background: rgba(196, 164, 132, 0.06);
             border-color: rgba(196, 164, 132, 0.15);
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.04);
         }
@@ -833,7 +870,7 @@
                 </div>
 
                 <div class="event-details">
-                    <div class="event-card">
+                    <div class="event-card iglesia">
                         <svg class="event-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M12 2L3 7V12C3 17 7 21 12 22C17 21 21 17 21 12V7L12 2Z" stroke-linecap="round" stroke-linejoin="round"/>
                             <path d="M12 8V16M8 12H16" stroke-linecap="round"/>
@@ -845,7 +882,7 @@
                         <a href="https://maps.app.goo.gl/sDBCwMqbPArkWRpw9?g_st=ipc" target="_blank" class="map-link">Ver Mapa</a>
                     </div>
 
-                    <div class="event-card">
+                    <div class="event-card normandie">
                         <svg class="event-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M7 8H17M7 12H17M7 16H13M3 3H21V21H3V3Z" stroke-linecap="round" stroke-linejoin="round"/>
                             <circle cx="17" cy="16" r="2" stroke-linecap="round"/>
