--- a/index.html
+++ b/index.html
@@ -292,15 +292,15 @@
         .event-details {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
-            gap: 70px;
-            max-width: 900px;
+            gap: 50px;
+            max-width: 1255px;
             width: 100%;
         }
 
         .event-card {
             position: relative;
             text-align: center;
-            padding: 30px;
+            padding: 50px;
             background: rgba(196, 164, 132, 0.04);
             border-radius: 4px;
             border: 1px solid rgba(196, 164, 132, 0.1);
@@ -308,6 +308,10 @@
             overflow: hidden;
             background-size: cover;
             background-position: center;
+            min-height: 400px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
         }
 
         /* Overlay para mejorar legibilidad del texto */
@@ -714,7 +718,7 @@
             }
 
             .event-details {
-                gap: 55px;
+                gap: 45px;
             }
 
             .gallery-grid {
@@ -784,6 +788,8 @@
 
             .event-card {
                 border-radius: 0;
+                padding: 40px;
+                min-height: 350px;
             }
 
             .form-row {
