Arreglar borde y cambiar proporción a 16:9 horizontal

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
             overflow: hidden;
             background-size: cover;
             background-position: center;
-            min-height: 400px;
+            min-height: 280px;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -325,6 +325,7 @@
             background: rgba(249, 249, 249, 0.6);
             backdrop-filter: blur(2px);
             -webkit-backdrop-filter: blur(2px);
+            border-radius: 4px;
             z-index: 0;
             transition: background 0.3s ease;
         }
@@ -776,7 +777,7 @@
             .event-card {
                 border-radius: 0;
                 padding: 40px;
-                min-height: 350px;
+                min-height: 250px;
             }
 
             .form-row {
