--- a/index.html
+++ b/index.html
@@ -302,16 +302,18 @@
             text-align: center;
             padding: 50px;
             background: rgba(196, 164, 132, 0.04);
-            border-radius: 4px;
-            border: 1px solid rgba(196, 164, 132, 0.1);
+            border-radius: 8px;
             transition: all 0.3s ease;
             overflow: hidden;
             background-size: cover;
             background-position: center;
-            min-height: 280px;
+            min-height: 350px;
             display: flex;
             flex-direction: column;
             justify-content: center;
+            box-shadow: 
+                0 0 0 1px rgba(196, 164, 132, 0.08) inset,
+                0 2px 8px rgba(0, 0, 0, 0.04);
         }
 
         /* Overlay para mejorar legibilidad del texto */
@@ -325,7 +327,7 @@
             background: rgba(249, 249, 249, 0.6);
             backdrop-filter: blur(2px);
             -webkit-backdrop-filter: blur(2px);
-            border-radius: 4px;
+            border-radius: 8px;
             z-index: 0;
             transition: background 0.3s ease;
         }
@@ -350,9 +352,10 @@
         }
 
         .event-card:hover {
-            transform: translateY(-1px);
-            border-color: rgba(196, 164, 132, 0.15);
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.04);
+            transform: translateY(-2px);
+            box-shadow: 
+                0 0 0 1px rgba(196, 164, 132, 0.12) inset,
+                0 6px 16px rgba(0, 0, 0, 0.06);
         }
 
         .event-title {
@@ -777,7 +780,7 @@
             .event-card {
                 border-radius: 0;
                 padding: 40px;
-                min-height: 250px;
+                min-height: 280px;
             }
 
             .form-row {
