--- a/index.html
+++ b/index.html
@@ -316,14 +316,14 @@
                 0 2px 8px rgba(0, 0, 0, 0.04);
         }
 
-        /* Overlay para mejorar legibilidad del texto */
+        /* Overlay para mejorar legibilidad del texto - EXPANDIDO 1PX */
         .event-card::before {
             content: '';
             position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
+            top: -1px;
+            left: -1px;
+            right: -1px;
+            bottom: -1px;
             background: rgba(249, 249, 249, 0.6);
             backdrop-filter: blur(2px);
             -webkit-backdrop-filter: blur(2px);
