--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
             border-radius: 8px;
             transition: all 0.3s ease;
             overflow: hidden;
-            background-size: 110%;
+            background-size: cover;
             background-position: center;
             min-height: 350px;
             display: flex;
