--- a/index.html
+++ b/index.html
@@ -282,6 +282,119 @@
             transform: scale(1.01);
         }
 
+        /* Lightbox Modal */
+        .lightbox {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(45, 45, 45, 0.97);
+            backdrop-filter: blur(20px);
+            -webkit-backdrop-filter: blur(20px);
+            z-index: 9999;
+            display: none;
+            align-items: center;
+            justify-content: center;
+            opacity: 0;
+            transition: opacity 0.4s ease;
+            padding: 40px;
+        }
+
+        .lightbox.active {
+            display: flex;
+            opacity: 1;
+        }
+
+        .lightbox-content {
+            max-width: 90vw;
+            max-height: 90vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            animation: lightboxZoom 0.5s ease;
+        }
+
+        @keyframes lightboxZoom {
+            from {
+                transform: scale(0.8);
+                opacity: 0;
+            }
+            to {
+                transform: scale(1);
+                opacity: 1;
+            }
+        }
+
+        .lightbox-image {
+            max-width: 100%;
+            max-height: 75vh;
+            width: auto;
+            height: auto;
+            border-radius: 4px;
+            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.5);
+            object-fit: contain;
+        }
+
+        .lightbox-caption {
+            margin-top: 30px;
+            max-width: 600px;
+            text-align: center;
+            color: #F9F9F9;
+            font-size: 16px;
+            font-style: italic;
+            line-height: 1.8;
+            padding: 0 20px;
+            animation: fadeInUp 0.6s ease 0.2s both;
+        }
+
+        @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        .lightbox-close {
+            position: absolute;
+            top: 30px;
+            right: 40px;
+            width: 40px;
+            height: 40px;
+            cursor: pointer;
+            opacity: 0.7;
+            transition: opacity 0.3s ease, transform 0.3s ease;
+        }
+
+        .lightbox-close:hover {
+            opacity: 1;
+            transform: rotate(90deg);
+        }
+
+        .lightbox-close::before,
+        .lightbox-close::after {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 30px;
+            height: 2px;
+            background-color: #F9F9F9;
+            transform-origin: center;
+        }
+
+        .lightbox-close::before {
+            transform: translate(-50%, -50%) rotate(45deg);
+        }
+
+        .lightbox-close::after {
+            transform: translate(-50%, -50%) rotate(-45deg);
+        }
+
         /* El Gran Día Section */
         .el-gran-dia {
             background-color: var(--background);
@@ -797,6 +910,20 @@
             footer {
                 padding: 25px 30px;
             }
+
+            .lightbox {
+                padding: 20px;
+            }
+
+            .lightbox-close {
+                top: 20px;
+                right: 20px;
+            }
+
+            .lightbox-caption {
+                font-size: 14px;
+                margin-top: 20px;
+            }
         }
     </style>
 </head>
@@ -837,23 +964,23 @@
                 </div>
 
                 <div class="gallery-grid">
-                    <div class="gallery-item">
-                        <img src="images/IMG_3955.png" alt="Nuria y Fernando">
+                    <div class="gallery-item" onclick="openLightbox(this)">
+                        <img src="images/IMG_3955.png" alt="Nuria y Fernando" data-caption="Escribe aquí la descripción de esta imagen...">
                     </div>
-                    <div class="gallery-item">
-                        <img src="https://images.unsplash.com/photo-1509316785289-025f5b846b35?w=1200" alt="Paisaje árido">
+                    <div class="gallery-item" onclick="openLightbox(this)">
+                        <img src="https://images.unsplash.com/photo-1509316785289-025f5b846b35?w=1200" alt="Paisaje árido" data-caption="Escribe aquí la descripción de esta imagen...">
                     </div>
-                    <div class="gallery-item">
-                        <img src="https://images.unsplash.com/photo-1467269204594-9661b134dd2b?w=1200" alt="Castillo">
+                    <div class="gallery-item" onclick="openLightbox(this)">
+                        <img src="https://images.unsplash.com/photo-1467269204594-9661b134dd2b?w=1200" alt="Castillo" data-caption="Escribe aquí la descripción de esta imagen...">
                     </div>
-                    <div class="gallery-item">
-                        <img src="https://images.unsplash.com/photo-1505142468610-359e7d316be0?w=1200" alt="Ola">
+                    <div class="gallery-item" onclick="openLightbox(this)">
+                        <img src="https://images.unsplash.com/photo-1505142468610-359e7d316be0?w=1200" alt="Ola" data-caption="Escribe aquí la descripción de esta imagen...">
                     </div>
-                    <div class="gallery-item">
-                        <img src="https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1200" alt="Montañas">
+                    <div class="gallery-item" onclick="openLightbox(this)">
+                        <img src="https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1200" alt="Montañas" data-caption="Escribe aquí la descripción de esta imagen...">
                     </div>
-                    <div class="gallery-item">
-                        <img src="https://images.unsplash.com/photo-1511884642898-4c92249e20b6?w=1200" alt="Río">
+                    <div class="gallery-item" onclick="openLightbox(this)">
+                        <img src="https://images.unsplash.com/photo-1511884642898-4c92249e20b6?w=1200" alt="Río" data-caption="Escribe aquí la descripción de esta imagen...">
                     </div>
                 </div>
             </div>
@@ -1042,6 +1169,15 @@
         </section>
     </main>
 
+    <!-- Lightbox Modal -->
+    <div class="lightbox" id="lightbox" onclick="closeLightbox()">
+        <div class="lightbox-close"></div>
+        <div class="lightbox-content" onclick="event.stopPropagation()">
+            <img class="lightbox-image" id="lightbox-image" src="" alt="">
+            <p class="lightbox-caption" id="lightbox-caption"></p>
+        </div>
+    </div>
+
     <!-- Footer -->
     <footer>
         <p>N & F © 2026</p>
@@ -1098,6 +1234,34 @@
 
         document.querySelectorAll('.section').forEach(section => {
             observer.observe(section);
+        });
+
+        // Lightbox Functions
+        function openLightbox(element) {
+            const img = element.querySelector('img');
+            const lightbox = document.getElementById('lightbox');
+            const lightboxImage = document.getElementById('lightbox-image');
+            const lightboxCaption = document.getElementById('lightbox-caption');
+
+            lightboxImage.src = img.src;
+            lightboxImage.alt = img.alt;
+            lightboxCaption.textContent = img.getAttribute('data-caption');
+
+            lightbox.classList.add('active');
+            document.body.style.overflow = 'hidden';
+        }
+
+        function closeLightbox() {
+            const lightbox = document.getElementById('lightbox');
+            lightbox.classList.remove('active');
+            document.body.style.overflow = '';
+        }
+
+        // Cerrar con tecla ESC
+        document.addEventListener('keydown', function(e) {
+            if (e.key === 'Escape') {
+                closeLightbox();
+            }
         });
 
         // Toggle bus options dropdown
