--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             display: flex;
             gap: 45px;
             list-style: none;
+            align-items: center;
         }
 
         .nav-links a {
@@ -105,6 +106,26 @@
         .nav-links a:hover,
         .nav-links a.active {
             color: var(--accent);
+        }
+
+        /* Botón especial para index2 */
+        .nav-button {
+            font-size: 11px;
+            font-weight: 600;
+            letter-spacing: 2px;
+            color: var(--accent);
+            text-decoration: none;
+            text-transform: uppercase;
+            transition: all 0.3s ease;
+            padding: 8px 16px;
+            border: 1px solid var(--accent);
+            border-radius: 4px;
+            display: inline-block;
+        }
+
+        .nav-button:hover {
+            background-color: var(--accent);
+            color: var(--background);
         }
 
         /* Sections - ESPACIO AUMENTADO A 30PX */
@@ -843,6 +864,11 @@
                 font-size: 10px;
             }
 
+            .nav-button {
+                font-size: 10px;
+                padding: 6px 12px;
+            }
+
             .hero h1 {
                 font-size: 38px;
             }
@@ -935,6 +961,7 @@
                 <li><a href="#momentos" class="nav-link">Momentos</a></li>
                 <li><a href="#el-gran-dia" class="nav-link">El Gran Día</a></li>
                 <li><a href="#confirmar" class="nav-link active">Confirmar</a></li>
+                <li><a href="index2.html" class="nav-button">Página 2</a></li>
             </ul>
         </nav>
     </header>
