--- a/index2.html
+++ b/index2.html
@@ -395,7 +395,7 @@
             transform: translate(-50%, -50%) rotate(-45deg);
         }
 
-        /* El Gran Día Section */
+        /* El Gran Día Section - NUEVA ESTRUCTURA */
         .el-gran-dia {
             background-color: var(--background);
             flex-direction: column;
@@ -411,64 +411,41 @@
         }
 
         .event-card {
-            position: relative;
-            text-align: center;
-            padding: 50px;
-            background: rgba(196, 164, 132, 0.04);
-            border-radius: 8px;
-            transition: all 0.3s ease;
+            background: #fff;
+            border-radius: 4px;
             overflow: hidden;
-            background-size: cover;
-            background-position: center;
-            min-height: 350px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            box-shadow: 
-                0 0 0 1px rgba(196, 164, 132, 0.08) inset,
-                0 2px 8px rgba(0, 0, 0, 0.04);
-        }
-
-        /* Overlay para mejorar legibilidad del texto - EXPANDIDO 1PX */
-        .event-card::before {
-            content: '';
-            position: absolute;
-            top: -1px;
-            left: -1px;
-            right: -1px;
-            bottom: -1px;
-            background: rgba(249, 249, 249, 0.6);
-            backdrop-filter: blur(2px);
-            -webkit-backdrop-filter: blur(2px);
-            border-radius: 8px;
-            z-index: 0;
-            transition: background 0.3s ease;
-        }
-
-        .event-card:hover::before {
-            background: rgba(249, 249, 249, 0.8);
-        }
-
-        /* Todo el contenido de la tarjeta debe estar encima del overlay */
-        .event-card > * {
-            position: relative;
-            z-index: 1;
-        }
-
-        /* Imágenes de fondo específicas */
-        .event-card.iglesia {
-            background-image: url('images/Iglesia.png');
-        }
-
-        .event-card.normandie {
-            background-image: url('images/Normandie.png');
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
 
         .event-card:hover {
             transform: translateY(-2px);
-            box-shadow: 
-                0 0 0 1px rgba(196, 164, 132, 0.12) inset,
-                0 6px 16px rgba(0, 0, 0, 0.06);
+            box-shadow: 0 6px 16px rgba(0, 0, 0, 0.08);
+        }
+
+        /* Contenedor de imagen */
+        .event-image {
+            width: 100%;
+            height: 300px;
+            overflow: hidden;
+            position: relative;
+        }
+
+        .event-image img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transition: transform 0.6s ease;
+        }
+
+        .event-card:hover .event-image img {
+            transform: scale(1.05);
+        }
+
+        /* Contenedor de texto */
+        .event-info {
+            padding: 35px 30px;
+            text-align: center;
         }
 
         .event-title {
@@ -483,14 +460,14 @@
         .event-time {
             font-size: 14px;
             color: var(--accent);
-            margin-bottom: 15px;
+            margin-bottom: 20px;
             font-weight: 600;
         }
 
         .event-location {
             font-size: 16px;
             color: var(--text-main);
-            margin-bottom: 5px;
+            margin-bottom: 8px;
             font-weight: 600;
         }
 
@@ -498,7 +475,7 @@
             font-size: 13px;
             color: var(--text-light);
             line-height: 1.6;
-            margin-bottom: 20px;
+            margin-bottom: 25px;
         }
 
         .map-link {
@@ -887,13 +864,19 @@
 
             .event-details {
                 grid-template-columns: 1fr;
-                gap: 45px;
+                gap: 30px;
             }
 
             .event-card {
                 border-radius: 0;
-                padding: 40px;
-                min-height: 280px;
+            }
+
+            .event-image {
+                height: 250px;
+            }
+
+            .event-info {
+                padding: 30px 25px;
             }
 
             .form-row {
@@ -947,7 +930,7 @@
                 <p class="date">24 de Abril, 2026</p>
 
                 <div class="countdown">
-                    <span class="countdown-number" id="days">110</span>
+                    <span class="countdown-number" id="days">89</span>
                     <span class="countdown-label">Días</span>
                 </div>
 
@@ -986,7 +969,7 @@
             </div>
         </section>
 
-        <!-- El Gran Día Section -->
+        <!-- El Gran Día Section - NUEVA ESTRUCTURA -->
         <section id="el-gran-dia" class="section el-gran-dia">
             <div>
                 <div class="section-header">
@@ -994,20 +977,32 @@
                 </div>
 
                 <div class="event-details">
-                    <div class="event-card iglesia">
-                        <h3 class="event-title">Ceremonia</h3>
-                        <p class="event-time">17:00</p>
-                        <p class="event-location">Iglesia de Nuestra Señora de la Anunciación</p>
-                        <p class="event-address">Torres de la Alameda, Madrid</p>
-                        <a href="https://maps.app.goo.gl/sDBCwMqbPArkWRpw9?g_st=ipc" target="_blank" class="map-link">Ver Mapa</a>
+                    <!-- Tarjeta Ceremonia -->
+                    <div class="event-card">
+                        <div class="event-image">
+                            <img src="images/Iglesia.png" alt="Iglesia de Nuestra Señora de la Anunciación">
+                        </div>
+                        <div class="event-info">
+                            <h3 class="event-title">Ceremonia</h3>
+                            <p class="event-time">17:00</p>
+                            <p class="event-location">Iglesia de Nuestra Señora de la Anunciación</p>
+                            <p class="event-address">Torres de la Alameda, Madrid</p>
+                            <a href="https://maps.app.goo.gl/sDBCwMqbPArkWRpw9?g_st=ipc" target="_blank" class="map-link">Ver Mapa</a>
+                        </div>
                     </div>
 
-                    <div class="event-card normandie">
-                        <h3 class="event-title">Convite</h3>
-                        <p class="event-time">18:30</p>
-                        <p class="event-location">Restaurante Normandie Ondarreta</p>
-                        <p class="event-address">A-1, Km 36, 28710 El Molar, Madrid</p>
-                        <a href="https://maps.app.goo.gl/JbA7AxqHtL2kPmYCA?g_st=ipc" target="_blank" class="map-link">Ver Mapa</a>
+                    <!-- Tarjeta Convite -->
+                    <div class="event-card">
+                        <div class="event-image">
+                            <img src="images/Normandie.png" alt="Restaurante Normandie Ondarreta">
+                        </div>
+                        <div class="event-info">
+                            <h3 class="event-title">Convite</h3>
+                            <p class="event-time">18:30</p>
+                            <p class="event-location">Restaurante Normandie Ondarreta</p>
+                            <p class="event-address">A-1, Km 36, 28710 El Molar, Madrid</p>
+                            <a href="https://maps.app.goo.gl/JbA7AxqHtL2kPmYCA?g_st=ipc" target="_blank" class="map-link">Ver Mapa</a>
+                        </div>
                     </div>
                 </div>
             </div>
