Centrar mejor imagen móvil y ocultar bordes laterales

--- a/index2.html
+++ b/index2.html
@@ -834,10 +834,12 @@
                 font-size: 10px;
             }
 
-            /* HERO MÓVIL - IMAGEN IMG_3955.png */
+            /* HERO MÓVIL - IMAGEN IMG_3955.png CENTRADA Y SIN BORDES */
             .hero {
                 background-image: url('images/IMG_3955.png');
                 background-attachment: scroll;
+                background-size: 120%; /* Zoom para ocultar los bordes */
+                background-position: center center; /* Centrado perfecto */
             }
 
             .hero h1 {
