--- a/index2.html
+++ b/index2.html
@@ -834,12 +834,12 @@
                 font-size: 10px;
             }
 
-            /* HERO MÓVIL - IMAGEN IMG_3955.png CENTRADA Y SIN BORDES */
+            /* HERO MÓVIL - IMAGEN IMG_3955.png CON COVER */
             .hero {
                 background-image: url('images/IMG_3955.png');
                 background-attachment: scroll;
-                background-size: 120%; /* Zoom para ocultar los bordes */
-                background-position: center center; /* Centrado perfecto */
+                background-size: cover; /* Cubre toda la pantalla sin dejar huecos */
+                background-position: center; /* Centrado perfecto */
             }
 
             .hero h1 {
