--- a/index2.html
+++ b/index2.html
@@ -834,12 +834,13 @@
                 font-size: 10px;
             }
 
-            /* HERO MÓVIL - IMAGEN IMG_3955.png CON COVER */
+            /* HERO MÓVIL - SIN PADDING Y CON IMAGEN COMPLETA */
             .hero {
                 background-image: url('images/IMG_3955.png');
                 background-attachment: scroll;
-                background-size: cover; /* Cubre toda la pantalla sin dejar huecos */
-                background-position: center; /* Centrado perfecto */
+                background-size: cover;
+                background-position: center;
+                padding: 0 !important; /* Sin padding para evitar bordes */
             }
 
             .hero h1 {
