--- a/index2.html
+++ b/index2.html
@@ -243,6 +243,7 @@
             padding: 50px 40px;
         }
 
+        /* GALERÍA CON CENTRADO AUTOMÁTICO DE IMÁGENES SOBRANTES */
         .gallery-grid {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
@@ -250,6 +251,7 @@
             max-width: 1255px;
             width: 100%;
             margin: 0 auto;
+            justify-items: center; /* ✅ Centra las imágenes sobrantes */
         }
 
         .gallery-item {
@@ -261,6 +263,7 @@
             border-radius: 4px;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+            width: 100%; /* Asegura que las imágenes ocupen todo el ancho de su celda */
         }
 
         .gallery-item img {
