--- a/index2.html
+++ b/index2.html
@@ -243,10 +243,11 @@
             padding: 50px 40px;
         }
 
-        /* GALERÍA CON CENTRADO AUTOMÁTICO */
+        /* GALERÍA CON FLEXBOX - CENTRADO AUTOMÁTICO */
         .gallery-grid {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
             gap: 20px;
             max-width: 1255px;
             width: 100%;
@@ -256,26 +257,13 @@
         .gallery-item {
             position: relative;
             overflow: hidden;
-            padding-bottom: 133%;
+            width: calc((100% - 40px) / 3); /* 3 columnas con gap de 20px */
+            padding-bottom: calc((100% - 40px) / 3 * 1.33); /* Aspect ratio 3:4 */
             cursor: pointer;
             background-color: #f0f0f0;
             border-radius: 4px;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
-        }
-
-        /* Centrar cuando queda UNA imagen suelta */
-        .gallery-item.center-single {
-            grid-column: 2 / 3;
-        }
-
-        /* Centrar cuando quedan DOS imágenes sueltas */
-        .gallery-grid.two-remaining .gallery-item:nth-last-child(2) {
-            grid-column: 2 / 3;
-        }
-
-        .gallery-grid.two-remaining .gallery-item:nth-last-child(1) {
-            grid-column: 3 / 4;
         }
 
         .gallery-item img {
@@ -855,7 +843,7 @@
                 background-attachment: scroll;
                 background-size: cover;
                 background-position: center;
-                padding: 0 !important; /* Sin padding para evitar bordes */
+                padding: 0 !important;
             }
 
             .hero h1 {
@@ -891,23 +879,11 @@
                 border-radius: 0;
             }
 
-            .gallery-grid {
-                grid-template-columns: repeat(2, 1fr);
-                gap: 15px;
-            }
-
+            /* GALERÍA MÓVIL - 2 COLUMNAS */
             .gallery-item {
+                width: calc((100% - 15px) / 2);
+                padding-bottom: calc((100% - 15px) / 2 * 1.33);
                 border-radius: 0;
-            }
-
-            /* Resetear centrado en móvil */
-            .gallery-item.center-single {
-                grid-column: auto;
-            }
-
-            .gallery-grid.two-remaining .gallery-item:nth-last-child(2),
-            .gallery-grid.two-remaining .gallery-item:nth-last-child(1) {
-                grid-column: auto;
             }
 
             .event-details {
@@ -1236,33 +1212,9 @@
                     galleryItem.appendChild(img);
                     galleryGrid.appendChild(galleryItem);
                 });
-
-                // ✨ CENTRAR IMÁGENES SOBRANTES
-                centerRemainingImages();
             } catch (error) {
                 console.error('Error al cargar la galería:', error);
             }
-        }
-
-        // Función para centrar imágenes sobrantes
-        function centerRemainingImages() {
-            const galleryGrid = document.getElementById('galleryGrid');
-            const items = galleryGrid.querySelectorAll('.gallery-item');
-            const totalImages = items.length;
-            const remainder = totalImages % 3;
-
-            // Limpiar clases anteriores
-            galleryGrid.classList.remove('two-remaining');
-            items.forEach(item => item.classList.remove('center-single'));
-
-            if (remainder === 1) {
-                // Solo queda 1 imagen: centrarla en la columna del medio
-                items[totalImages - 1].classList.add('center-single');
-            } else if (remainder === 2) {
-                // Quedan 2 imágenes: centrarlas juntas
-                galleryGrid.classList.add('two-remaining');
-            }
-            // Si remainder === 0, no hacer nada (fila completa)
         }
 
         // Cargar galería al iniciar
